# robot_module

./: .gitmodules  CMakeLists.txt  README.md  test.c  test.cpp
Quadruped/C/: CMakeLists.txt
Quadruped/C/include/: Body.h  GaitCtrl.h  Leg.h  LegCtrl.h
Quadruped/C/source/: GaitCtrl.c
Quadruped/Cpp/: CMakeLists.txt
Quadruped/Cpp/include/: Body.h  BodyCtrl.h  BodyCtrlNew.h  GaitCtrl.h  Leg.h  LegCtrl.h  RobotEst.h  SlopeEst.h  TraPlan.h  multiCircle.h  virtualLegCtrl.h
Quadruped/Cpp/source/: Body.cpp  Quad.cpp
Quadruped_Simple/C/include/: water_gait1.h
Quadruped_Simple/C/source/: Body.c  Leg.c  LegCtrl.c  water_gait1.c
Quadruped_Simple/Cpp/include/: GaitCtrl.h  Leg.h  water_gait1.h
Quadruped_Simple/Cpp/source/: Body.cpp  GaitCtrl.cpp  Leg.cpp  LegCtrl.cpp  water_gait1.cpp
